<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TABS CONTAINER -->
    <LinearLayout
        android:id="@+id/tabsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/groupChatsButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_groups_recent_chats_activity"
            android:textColor="@color/colorInactiveWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/directChatsButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_chats_recent_chats_activity"
            android:textColor="@color/colorInactiveWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_profile_recent_chats_activity"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Space
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_margin="@dimen/default_large_margin" />

        <!-- PROFILE IMAGE -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:srcCompat="@drawable/ic_default_picture_48dp" />

        <!-- PROGRESS BAR -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_margin="@dimen/default_large_margin"
            android:visibility="invisible" />

    </LinearLayout>

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <!-- PROFILE EMAIL CONTAINER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <!-- PROFILE EMAIL -->
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingEnd="@dimen/default_margin"
                    android:textAlignment="center"
                    android:textSize="@dimen/default_text_size" />

            </LinearLayout>

            <!-- PROFILE USERNAME -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/userName_hint_profile_activity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_input_username"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userTypeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/userType_hint_profile_activity"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userTypeTextBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoText="false"
                        android:clickable="false"
                        android:editable="false"
                        android:elegantTextHeight="false"
                        android:enabled="true"
                        android:focusable="auto"
                        android:focusableInTouchMode="false"
                        android:freezesText="true"
                        android:hint="hint"
                        android:linksClickable="false"
                        android:longClickable="false"
                        android:selectAllOnFocus="false"
                        android:text="@string/userType_hint_profile_activity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textIsSelectable="false"
                        android:textStyle="normal"
                        app:textInputLayoutFocusedRectEnabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/userTypeRequestButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/userTypeTextView"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:fontFamily="@font/roboto_medium"
                    android:letterSpacing="0.1"
                    android:text="@string/userType_request_profile_activity"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <!-- BUTTON UPDATE USERNAME -->
            <Button
                android:id="@+id/updateButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/button_update_account"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON SIGN OUT -->
            <Button
                android:id="@+id/signOutButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_text_size_mini"
                android:text="@string/button_sign_out_account"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON DELETE ACCOUNT -->
            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_text_size_mini"
                android:text="@string/button_delete_account"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
