<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TITLE STUDYCIRCLE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="#363636"
            android:textSize="34sp"/>

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_margin="@dimen/default_large_margin"
            android:src="@drawable/ic_logo_main">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome_message_main_activity"
            android:textColor="#363636"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/poppins"
            android:text="@string/help_message_main_activity"
            android:textColor="#363636"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- IMAGE VIEW STUDYCIRCLE -->

    <!-- DESCRIPTION STUDYCIRCLE -->

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        android:baselineAligned="false"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/loginButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/poppins_medium"
            android:foregroundGravity="bottom"
            android:padding="@dimen/default_large_margin"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="14sp" />

        <!--        &lt;!&ndash; BUTTON CHAT &ndash;&gt;-->
        <!--        <Button-->
        <!--            android:id="@+id/chatButton"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/chat_with_mentor"-->
        <!--            android:textColor="#fff"-->
        <!--            android:textSize="@dimen/default_text_size"-->
        <!--            android:background="@drawable/button_radius_accent_color"-->
        <!--            style="?android:attr/borderlessButtonStyle"-->
        <!--            android:layout_margin="@dimen/default_large_margin"-->
        <!--            android:padding="@dimen/default_large_margin"/>-->

    </LinearLayout>

</LinearLayout>
