<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- TABS CONTAINER -->
    <LinearLayout
        android:id="@+id/tabsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/groupChatsButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_groups_recent_chats_activity"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/directChatsButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_chats_recent_chats_activity"
            android:textColor="@color/colorInactiveWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/tab_title_profile_recent_chats_activity"
            android:textColor="@color/colorInactiveWhite"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <!-- BUTTONS CHAT CONTAINER -->

    <LinearLayout
        android:id="@+id/chatPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/chatPreview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/contactImageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_default_picture_48dp"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <TextView
                android:id="@+id/chatNamePreview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView1"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chatMessagePreview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chatNamePreview1"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView1"
                android:text=""
                android:textColor="@color/colorMidGrey"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/chatPreview1Separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:background="@color/colorLightGrey" />

        <RelativeLayout
            android:id="@+id/chatPreview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/contactImageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_default_picture_48dp"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <TextView
                android:id="@+id/chatNamePreview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView2"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chatMessagePreview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chatNamePreview2"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView2"
                android:text=""
                android:textColor="@color/colorMidGrey"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/chatPreview2Separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:background="@color/colorLightGrey" />

        <RelativeLayout
            android:id="@+id/chatPreview3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/contactImageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_default_picture_48dp"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <TextView
                android:id="@+id/chatNamePreview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView3"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chatMessagePreview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chatNamePreview3"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/contactImageView3"
                android:text=""
                android:textColor="@color/colorMidGrey"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/chatPreview3Separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:background="@color/colorLightGrey" />

    </LinearLayout>

</LinearLayout>